# TradingAgents-astock

./: .dockerignore  .gitignore  AGENT.md  A股权威媒体信息披露平台.md  CHANGELOG.md  Deploy.md  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  start.sh
backend/: history.py  main.py  requirements.txt  task_manager.py
cli/: main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: loading-screen.tsx  progress-panel.tsx  report-viewer.tsx  sidebar.tsx  welcome-screen.tsx
frontend/src/components/ui/: button.tsx  collapsible.tsx  input.tsx  progress.tsx  select.tsx  tabs.tsx
frontend/src/hooks/: use-analysis.ts
frontend/src/lib/: api.ts  types.ts
tradingagents/: default_config.py
tradingagents/agents/: schemas.py
tradingagents/agents/managers/: portfolio_manager.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  news_data_tools.py  rating.py  signal_data_tools.py  structured.py  technical_indicators_tools.py  ticker_validation.py
tradingagents/dataflows/: a_stock.py  interface.py  stockstats_utils.py  trading_calendar.py  utils.py
tradingagents/graph/: propagation.py  trading_graph.py
tradingagents/llm_clients/: openai_client.py
web/: app.py  history.py  pdf_export.py  progress.py  runner.py
web/components/: progress_panel.py  report_viewer.py  sidebar.py
