[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-astock"
version = "0.2.11"
description = "A股多Agent投研Web系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "simonlin1212", email = "simonlin1212@users.noreply.github.com"},
]
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "fpdf2>=2.8.0",
    "python-dotenv>=1.1.0",
    "mootdx>=0.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "exchange_calendars>=4.0",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=4.0.0"]

[tool.setuptools.packages.find]
include = ["tradingagents*", "backend*"]
